--- a/configs/robofly_defconfig
+++ b/configs/robofly_defconfig
@@ -8,7 +8,7 @@ CONFIG_MOTORS_ESC_PROTOCOL_STANDARD_PWM=y
 CONFIG_CONTROLLER_PID_FILTER_ALL=y
 # CONFIG_CONTROLLER_PID_IMPROVED_BARO_Z_HOLD=y
 
-CONFIG_DECK_FORCE="bcUSD:bcLedRing:bcFlapperDeck"
+#CONFIG_DECK_FORCE="bcUSD:bcLedRing:bcFlapperDeck"
 CONFIG_DECK_USD=y
 
 CONFIG_DECK_FLAPPER_EXTRX_ENABLE=n # Enable external receiver
